# Algo-Technopark

./: README.md
Module 1/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
Module 2/: task1.cpp  task2.cpp  task4.cpp
Module 2/Huffman/: Huffman.cpp  Huffman.h
Module 3/: task2.cpp  task3.cpp  task4.cpp
Module 3/Task 1/: CMakeLists.txt  main.cpp
Module 3/Task 1/include/: arcgraph.hpp  igraph.hpp  listgraph.hpp  matrixgraph.hpp  setgraph.hpp
Module 3/Task 1/src/: arcgraph.cpp  listgraph.cpp  matrixgraph.cpp  setgraph.cpp
Module 3/Task 5/: CMakeLists.txt  compile.sh  main.cpp
Module 3/Task 5/include/: igraph.hpp  listgraph.hpp  minimumspanningtree.hpp  randomgraph.hpp  travellingsalesman.hpp
Module 3/Task 5/src/: listgraph.cpp  minimumspanningtree.cpp  randomgraph.cpp  travellingsalesman.cpp
